pxc/tests/test_03_interface/interf_constr.px
import test_common "";

namespace interf_ptr;
import io;

interface ifoo {
  function void m1() const;
}

struct foo : ifoo : {
  function void m1() const {
    io::println("m1");
  }
}

function void test2(ptr{ifoo} x)
{
  x->m1();
}

function void test1()
{
  ptr{ifoo} f; // error: not default-constructible
  // ptr{ifoo} f = foo();
  test2(f);
}

test1();
